--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@ body{
 }
 
 .app-cnt{
+    display: flex;
+    justify-content: center;
     box-shadow: 0 2px 22px rgba(0,0,0,0.3);
     border-radius: 4px;
     padding:1.5em 1.5em;
